# pyside6-multiselect-combobox

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
examples/: demo.py  demo_accessibility.py  demo_batch_update.py  demo_clear_button.py  demo_close_on_select.py  demo_coalescing.py  demo_custom_delimiter.py  demo_custom_style.py  demo_custom_style_hover_icon.py  demo_custom_style_light.py  demo_data_role.py  demo_disabled_items.py  demo_duplicates_and_find.py  demo_filter_in_popup.py  demo_form_validation.py  demo_large_dataset.py  demo_max_selection.py  demo_objects.py  demo_per_item_styles.py  demo_programmatic_selection.py  demo_remove_items.py  demo_runtime_role_switch.py  demo_select_all.py  demo_select_by_api.py  demo_signals_advanced.py  demo_signals_basic.py  demo_summary_display.py  demo_tooltip_elision.py  demo_view_virtualization.py
pyside6_multiselect_combobox/: multiselect_combobox.py
tests/: test_multiselect_combobox.py
