[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyside6-multiselect-combobox"
version = "1.2.0"
description = "A custom PySide6 widget providing a multi-select combobox functionality for PySide6 applications. Forked from pyqt6-multiselect-combobox"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "user0706" }
]
dependencies = [
    "pyside6>=6.6.3.1",
]
keywords = ["PySide6", "Qt", "combobox", "multi-select", "widget"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/RandallPittmanOrSt/pyside6-multiselect-combobox"
Issues = "https://github.com/RandallPittmanOrSt/pyside6-multiselect-combobox/issues"
Documentation = "https://pyqt6-multiselect-combobox.readthedocs.io/en/latest/"

[tool.hatch.build.targets.wheel]
packages = ["pyqt6_multiselect_combobox"]
